Use Collections.singletonList in UsuarioLogado